@@ -1,5 +1,11 @@
 2011-01-26  Stefan Bidigaray <stefanbidi@gmail.com>
 
+	* Source/NSLocale.m: Add currency code to locale identifier, if present.
+	* Source/NSDateFormatter.m: Fix crash on dealloc because of autoreleased
+	object.
+
+2011-01-26  Stefan Bidigaray <stefanbidi@gmail.com>
+
 	* Source/NSLocale.m: Minor memory mgt fixes.
 
 2011-01-24  Stefan Bidigaray <stefanbidi@gmail.com>
